Bug #76974, address review round 1
- Cut REGRESSION_ATTEMPTS to 3 and the C-R5 attempts to 1: since the
  discovery recorder, a missing fix fails every attempt, so repeats add
  nothing.
- Require the forced overlap unconditionally in the regression tests, so
  they cannot pass without forcing the race they are named for.
- Document the permanent JVM-level deadlock the baselines leave in the
  surefire fork, and add a Boot-upgrade maintenance note listing the
  Spring internals the harness depends on.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>